// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileNavigation > styles > should render with secondary links 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  background: var(--cui-bg-overlay);
  z-index: 1000;
}

.circuit-1 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  -webkit-transform: translateY(-25%);
  -moz-transform: translateY(-25%);
  -ms-transform: translateY(-25%);
  transform: translateY(-25%);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out;
  outline: none;
  background-color: var(--cui-bg-normal);
  overflow: hidden;
}

.circuit-1::after {
  content: '';
  display: block;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  height: 16px;
  background: linear-gradient(
                      rgba(255,255,255,0),
                      rgba(255,255,255,0.66),
                      rgba(255,255,255,1)
                    );
}

.circuit-2 {
  height: 100%;
  max-width: 480px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  margin: 0 auto;
  padding-top: 56px;
  padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
}

.circuit-3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 1;
  padding: 4px;
  background: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 1) 60%,
      rgba(255, 255, 255, 0)
    );
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-normal);
  border-color: var(--cui-border-normal);
  color: var(--cui-fg-normal);
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border-color: transparent!important;
  background-color: transparent;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  pointer-events: none;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-4:active,
.circuit-4[aria-expanded='true'],
.circuit-4[aria-pressed='true'] {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-5 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-6 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-9 {
  list-style: none;
}

.circuit-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--cui-fg-normal);
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  color: var(--cui-fg-accent);
}

.circuit-10:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-10:focus::-moz-focus-inner {
  border: 0;
}

.circuit-10:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-10:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-10:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-10:disabled,
.circuit-10[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

@media (max-width: 1279px) {
  .circuit-10 {
    margin-bottom: 1px;
  }

  .circuit-10::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid var(--cui-border-divider);
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-10 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-10:hover {
  background-color: var(--cui-bg-accent-hovered);
}

.circuit-10:active {
  background-color: var(--cui-bg-accent-pressed);
}

.circuit-11 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-12 {
  display: inline-block;
  line-height: 0;
}

.circuit-13 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
}

@media (max-width: 1279px) {
  .circuit-13 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.circuit-14 {
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 120ms ease-in-out;
  transition: transform 120ms ease-in-out;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  margin-left: auto;
  -webkit-transition: -webkit-transform 120ms ease-in-out;
  transition: transform 120ms ease-in-out;
}

.circuit-15 {
  list-style: none;
  border-bottom: 1px solid var(--cui-border-divider);
  margin-bottom: -1px;
}

.circuit-15>*:last-child {
  padding-bottom: 24px;
}

.circuit-16 {
  display: inline-block;
  line-height: 0;
  margin: 32px 16px 8px;
}

.circuit-17 {
  text-transform: uppercase;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  color: var(--cui-fg-normal);
}

.circuit-18 {
  list-style: none;
}

.circuit-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  outline: none;
  color: var(--cui-fg-normal);
  background-color: var(--cui-bg-normal);
  text-align: left;
  cursor: pointer;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 16px 24px;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.circuit-19:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-19:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-19:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-19:focus::-moz-focus-inner {
  border: 0;
}

.circuit-19:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-19:disabled,
.circuit-19[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

@media (min-width: 1280px) {
  .circuit-19 {
    padding: 12px;
    padding-left: 20px;
  }
}

.circuit-20 {
  display: inline-block;
  line-height: 0;
  margin-right: 8px;
}

.circuit-21 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-2"
        >
          <div
            class="circuit-3"
          >
            <button
              class="circuit-4"
              title="Close navigation modal"
              type="button"
            >
              <span
                class="circuit-5"
              >
                <span
                  class="circuit-6"
                />
              </span>
              <span
                class="circuit-7"
              >
                <svg
                  fill="none"
                  height="16"
                  role="presentation"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="circuit-6"
                >
                  Close navigation modal
                </span>
              </span>
            </button>
          </div>
          <nav
            aria-label="Primary"
          >
            <ul
              class="circuit-9"
            >
              <li>
                <button
                  aria-controls=":r1:"
                  aria-current="page"
                  aria-expanded="false"
                  class="circuit-10"
                  data-focus-list=":r0:"
                >
                  <span
                    class="circuit-11"
                  >
                    <svg
                      fill="none"
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7 23a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14-3a3 3 0 1 0-5.999 0A3 3 0 0 0 21 20zm0-16H5.114a2 2 0 0 1-1.921-1.445L2.92 1.61a1 1 0 0 0-1.9.59l3.24 11.35A2 2 0 0 0 6.18 15H19a2 2 0 0 0 1.92-1.45l2-7c.052-.179.08-.364.08-.55a2.006 2.006 0 0 0-2-2z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="circuit-12"
                  >
                    <span
                      class="circuit-13"
                    >
                      Shop
                    </span>
                  </span>
                  <svg
                    class="circuit-14"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11c-.266 0-.52-.104-.71-.29l-4-4A1.013 1.013 0 0 1 3 6a1 1 0 0 1 1-1c.266 0 .52.104.71.29L8 8.58l3.29-3.29c.19-.186.445-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71l-4 4c-.19.186-.444.29-.71.29z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                <ul
                  aria-hidden="true"
                  class="circuit-15"
                  id=":r1:"
                  role="list"
                  style="overflow-y: hidden; will-change: height; opacity: 0; height: 0px; visibility: hidden; transition: all 200ms ease-in-out;"
                >
                  <li>
                    <span
                      class="circuit-16"
                    >
                      <h3
                        class="circuit-17"
                      >
                        For Kids
                      </h3>
                    </span>
                    <ul
                      class="circuit-18"
                      role="list"
                    >
                      <li>
                        <a
                          class="circuit-19"
                          data-focus-list=":r2:"
                          href="/shop/toys"
                        >
                          <span
                            class="circuit-20"
                          >
                            <p
                              class="circuit-21"
                            >
                              Toys
                            </p>
                          </span>
                        </a>
                      </li>
                      <li>
                        <a
                          class="circuit-19"
                          data-focus-list=":r2:"
                          href="/shop/books"
                        >
                          <span
                            class="circuit-20"
                          >
                            <p
                              class="circuit-21"
                            >
                              Books
                            </p>
                          </span>
                        </a>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`MobileNavigation > styles > should render without secondary links 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.circuit-0 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  -webkit-transition: opacity 120ms ease-in-out;
  transition: opacity 120ms ease-in-out;
  background: var(--cui-bg-overlay);
  z-index: 1000;
}

.circuit-1 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  -webkit-transform: translateY(-25%);
  -moz-transform: translateY(-25%);
  -ms-transform: translateY(-25%);
  transform: translateY(-25%);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out;
  outline: none;
  background-color: var(--cui-bg-normal);
  overflow: hidden;
}

.circuit-1::after {
  content: '';
  display: block;
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  height: 16px;
  background: linear-gradient(
                      rgba(255,255,255,0),
                      rgba(255,255,255,0.66),
                      rgba(255,255,255,1)
                    );
}

.circuit-2 {
  height: 100%;
  max-width: 480px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  margin: 0 auto;
  padding-top: 56px;
  padding-bottom: calc(env(safe-area-inset-bottom) + 32px);
}

.circuit-3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  z-index: 1;
  padding: 4px;
  background: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 1),
      rgba(255, 255, 255, 1) 60%,
      rgba(255, 255, 255, 0)
    );
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: auto;
  height: auto;
  margin: 0;
  cursor: pointer;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-width: 1px;
  border-style: solid;
  border-radius: 999999px;
  -webkit-transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,color 120ms ease-in-out,background-color 120ms ease-in-out,border-color 120ms ease-in-out;
  background-color: var(--cui-bg-normal);
  border-color: var(--cui-border-normal);
  color: var(--cui-fg-normal);
  padding: calc(12px - 1px) calc(24px - 1px);
  position: relative;
  overflow: hidden;
  padding: calc(12px - 1px);
  border-color: transparent!important;
  background-color: transparent;
}

.circuit-4:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-4:focus::-moz-focus-inner {
  border: 0;
}

.circuit-4:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  pointer-events: none;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-4:active,
.circuit-4[aria-expanded='true'],
.circuit-4[aria-pressed='true'] {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-5 {
  display: block;
  border-radius: 100%;
  border: 2px solid currentColor;
  border-top-color: transparent;
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  transform-origin: 50% 50%;
  width: 24px;
  height: 24px;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-6 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  visibility: inherit;
  -webkit-transform: scale3d(1, 1, 1);
  -moz-transform: scale3d(1, 1, 1);
  -ms-transform: scale3d(1, 1, 1);
  transform: scale3d(1, 1, 1);
  -webkit-transition: opacity 120ms ease-in-out,-webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,transform 120ms ease-in-out,visibility 120ms ease-in-out;
}

.circuit-9 {
  list-style: none;
}

.circuit-10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--cui-fg-normal);
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-10:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-10:focus::-moz-focus-inner {
  border: 0;
}

.circuit-10:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-10:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-10:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-10:disabled,
.circuit-10[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

@media (max-width: 1279px) {
  .circuit-10 {
    margin-bottom: 1px;
  }

  .circuit-10::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid var(--cui-border-divider);
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-10 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-11 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-12 {
  display: inline-block;
  line-height: 0;
}

.circuit-13 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

@media (max-width: 1279px) {
  .circuit-13 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="circuit-0"
    >
      <div
        aria-modal="true"
        class="circuit-1"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="circuit-2"
        >
          <div
            class="circuit-3"
          >
            <button
              class="circuit-4"
              title="Close navigation modal"
              type="button"
            >
              <span
                class="circuit-5"
              >
                <span
                  class="circuit-6"
                />
              </span>
              <span
                class="circuit-7"
              >
                <svg
                  fill="none"
                  height="16"
                  role="presentation"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="circuit-6"
                >
                  Close navigation modal
                </span>
              </span>
            </button>
          </div>
          <nav
            aria-label="Primary"
          >
            <ul
              class="circuit-9"
            >
              <li>
                <a
                  class="circuit-10"
                  data-focus-list=":r3:"
                  href="/"
                >
                  <span
                    class="circuit-11"
                  >
                    <svg
                      fill="none"
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M23 9a1 1 0 0 1-1.57.82l-1.43-1V20.5a2.5 2.5 0 0 1-2.5 2.5H15a1 1 0 0 1-1-1v-5a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v5a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 20.5V8.82l-1.43 1A1.011 1.011 0 0 1 2 10a1 1 0 0 1-.57-1.82l10-7a.992.992 0 0 1 1.14 0l10 7A.999.999 0 0 1 23 9z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span
                    class="circuit-12"
                  >
                    <span
                      class="circuit-13"
                    >
                      Home
                    </span>
                  </span>
                </a>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</body>
`;
